change made to navbar to add dynamic links

--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header id="main-header">
+    <header class="main-header">
         <nav class="navbar">
             <h1 class="logo">Pokémon</h1>
             <ul class="nav-list">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#pokemones">Pokemones</a></li>
-                <li><a href="#rarezas">Rarezas</a></li>
+                <li><a class="ancla" href="#inicio">Inicio</a></li>
+                <li><a class="ancla"  href="#pokemones">Pokemones</a></li>
+                <li><a class="ancla"  href="#rarezas">Rarezas</a></li>
                 <li><a href="/paginas/busqueda.html">Pokedex</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <div class="titulo">
-        <h2>POKEDEX</h2>
-    </div>
-        <div id="inicio">
+        <section id="inicio"> 
+            <h2 class="titulo">POKEDEX</h2>
             <div class="descripcion-pokedex">
                 <div class="texto-descripcion">
                     <h3>¿Que es una Pokedex?</h3>
@@ -32,121 +30,121 @@
                     <p>La Pokédex muestra el número nacional, categoría, altura, peso, tipo(s), habilidades y una descripción del Pokémon. Registra datos sobre su hábitat, evolución, movimientos, comportamiento y huella. Se completa al ver o capturar especies e incluye arte o modelo del Pokémon.</p>
                 </div>
             <img src="/IMG/25531cf8ab955b758c852b48ad6878c5.jpg" alt="foto de una pokedex">
-        </div>
+        </section>
     </div>
     <section id="pokemones">
         <h3 class="title-pokemon-type">Tipos de Pokemon</h3>
         <div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Agua</h4>
                 <p>Los Pokémon de tipo Agua viven en ríos, lagos y océanos, y destacan por sus ataques basados en el agua como chorros y olas. Son versátiles y equilibrados, con <strong>ventaja sobre Fuego, Roca y Tierra, y vulnerables a Planta y Eléctrico.</strong></p>
-            </section>
+            </div>
             <img src="/IMG/agua.jpg" alt="tipo agua">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Fuego</h4>
                 <p>Los Pokémon de tipo Fuego usan llamas y calor en combate. <strong>Son fuertes contra Planta, Hielo, Bicho y Acero, pero débiles frente a Agua, Roca y Tierra</strong>. Representan energía, pasión y poder destructivo.</p>
-            </section>
+            </div>
             <img src="/IMG/fuego.jpg" alt="tipo fuego">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Planta</h4>
                 <p>Los Pokémon de tipo Planta controlan la naturaleza con hojas, raíces y polen. <strong>Son efectivos contra Agua, Roca y Tierra, pero débiles frente a Fuego, Hielo, Veneno, Volador y Bicho</strong>. Su fuerza está en la resistencia y el crecimiento.</p>
-            </section>
+            </div>
             <img src="/IMG/planta.jpg" alt="tipo planta">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Electrico</h4>
                 <p>Los Pokémon de tipo Eléctrico generan energía eléctrica para atacar con rayos y descargas. <strong>Son fuertes contra Agua y Volador, pero vulnerables a Tierra</strong>. Su rapidez y agilidad los hace muy peligrosos en combate.</p>
-            </section>
+            </div>
             <img src="/IMG/electrico.jpg" alt="tipo electrico">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Hielo</h4>
                 <p>Los Pokémon de tipo Hielo controlan el frío y la nieve. <strong>Son fuertes contra Planta, Tierra, Volador y Dragón, pero débiles frente a Fuego, Lucha, Roca y Acero</strong>. Su poder está en congelar y ralentizar al enemigo.</p>
-            </section>
+            </div>
             <img src="/IMG/hielo.jpg" alt="tipo hielo">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Lucha</h4>
                 <p>Los Pokémon de tipo Lucha usan fuerza física y técnicas de combate cuerpo a cuerpo. <strong>Son fuertes contra Normal, Hielo, Roca, Siniestro y Acero, pero débiles frente a Psíquico, Volador y Hada</strong>. Representan coraje y determinación.</p>
-            </section>
+            </div>
             <img src="/IMG/lucha.jpg" alt="tipolucha">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Veneno</h4>
                 <p>Los Pokémon de tipo Veneno atacan con toxinas y gases. <strong>Son efectivos contra Planta y Hada, pero vulnerables a Tierra y Psíquico</strong>. Su estrategia combina daño progresivo y debilitamiento del rival.</p>
-            </section>
+            </div>
             <img src="/IMG/veneno.jpg" alt="tipo veneno">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Tierra</h4>
                 <p>Los Pokémon de tipo Tierra dominan el terreno y el suelo. <strong>Son fuertes contra Fuego, Eléctrico, Veneno, Roca y Acero, pero débiles frente a Agua, Planta y Hielo</strong>. Representan estabilidad y fuerza sólida.</p>
-            </section>
+            </div>
             <img src="/IMG/tierra.jpg" alt="tipo tierra">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Volador</h4>
                 <p>Los Pokémon de tipo Volador se desplazan por el aire y atacan desde arriba. <strong>Son fuertes contra Planta, Lucha y Bicho, pero débiles frente a Eléctrico, Hielo y Roca</strong>. Su velocidad y libertad son su mayor ventaja.</p>
-            </section>
+            </div>
             <img src="/IMG/volador.jpg" alt="tipo volador">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Psíquico</h4>
                 <p>Los Pokémon de tipo Psíquico usan poderes mentales y telequinesis. Son fuertes contra Lucha y Veneno, pero vulnerables a Bicho, Fantasma y Siniestro. Representan inteligencia y percepción extrasensorial.</p>
-            </section>
+            </div>
             <img src="/IMG/psiquico.jpg" alt="tipo psiquico">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Bicho</h4>
                 <p>Los Pokémon de tipo Bicho atacan con enjambres, pinchos y rapidez. <strong>Son efectivos contra Planta, Psíquico y Siniestro, pero débiles frente a Fuego, Volador y Roca</strong>. Son ágiles y resistentes en grupo.</p>
-            </section>
+            </div>
             <img src="/IMG/bicho.jpg" alt="tipo bicho">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Roca</h4>
                 <p>Los Pokémon de tipo Roca son fuertes y resistentes, usando rocas y piedras en combate. <strong>Son efectivos contra Fuego, Hielo, Volador y Bicho, pero débiles frente a Agua, Planta, Lucha, Tierra y Acero</strong>. Representan solidez y defensa.</p>
-            </section>
+            </div>
             <img src="/IMG/roca.jpg" alt="tipo roca">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Fantasma</h4>
                 <p>Los Pokémon de tipo Fantasma usan ataques intangibles y espíritus. <strong>Son fuertes contra Psíquico y Fantasma, pero débiles frente a Siniestro y otros Fantasma</strong>. Representan misterio y lo sobrenatural.</p>
-            </section>
+            </div>
             <img src="/IMG/fantasma.jpg" alt="tipo fantasma">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Dragon</h4>
                 <p>Los Pokémon de tipo Dragón son poderosos y raros, con ataques elementales devastadores. <strong>Son fuertes contra otros Dragón, pero vulnerables a Hielo, Dragón y Hada</strong>. Representan fuerza y majestuosidad.</p>
-            </section>
+            </div>
             <img src="/IMG/dragon.png" alt="tipo dragon">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Siniestro</h4>
                 <p>Los Pokémon de tipo Siniestro usan tácticas astutas y ataques oscuros. <strong>Son fuertes contra Psíquico y Fantasma, pero débiles frente a Lucha, Bicho y Hada</strong>. Representan astucia y sigilo.</p>
-            </section>
+            </div>
             <img src="/IMG/siniestro.jpg" alt="tipo siniestro">
         </div>
         <div class="pokemon-type">
-            <section>
+            <div>
                 <h4>Acero</h4>
                 <p>Los Pokémon de tipo Acero tienen cuerpos metálicos resistentes. <strong>Son fuertes contra Hielo, Roca y Hada, pero débiles frente a Fuego, Lucha y Tierra</strong>. Representan defensa, durabilidad y precisión.</p>
-            </section>
+            </div>
             <img src="/IMG/metal.jpg" alt="tipo acero">
         </div>
     </div>
@@ -193,4 +191,5 @@
     </div>
     
 </body>
+<script src="/JS/main.js"></script>
 </html>
